--- a/react_gallery_app-v1/react_gallery_app-v1/src/index.css
+++ b/react_gallery_app-v1/react_gallery_app-v1/src/index.css
@@ -1,14 +1,203 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  color: #3f4850;
+  background-color: red;
+  background: url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a {
+  color: #fff;
+  font-weight: 300;
+}
+h1 {
+  font-size: 4em;
+  font-family: Comic Sans MS ;
+  color: white;
+  margin: 20px 0 10px 0;
+  text-transform: capitalize;
+}
+
+h2 {
+  font-size: 2em;
+  font-family: Comic Sans MS ;
+  color: white;
+  margin: 20px 0;
+  text-transform: capitalize;
+}
+
+.fa-exclamation-triangle {
+  font-size: 9em;
+  margin: 0;
+  padding: 0;
+  color: rgba(9, 95, 234, .5)
+}
+
+.navbutton {
+  height: 2.75em;
+  width: 8em;
+  margin: 0 1em 1.5em .09em;
+  font-size: 1.35em;
+  border-radius: 1.30rem;
+  color: rgb(255,255,265);
+  background-color: rgb(179, 9, 226);
+}
+.navbutton:hover {
+  color: rgb(255,255,255);
+  background-color: rgb(247, 22, 108);
+  cursor: pointer;
+}
+.search-text {
+  font-size: 1.25em;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.search-form {
+  max-width: 600px;
+  display: flex;
+  margin: 0 auto 40px;
+}
+
+.search-form button {
+  outline: none;
+  background-color: rgb(66, 134, 244);
+  padding: 0px 15px;
+  border-radius: 0 0.35em 0.35em 0;
+  cursor: pointer;
+}
+
+input {
+  font-size: 1em;
+  width: 100%;
+  background-color: #edeff0;
+  padding: 10px 15px;
+  border: 3px solid #d7dbdf;
+  border-right: none;
+  border-radius: 0.35em 0 0 0.35em;
+  outline: none;
+}
+
+.main-nav li {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+.main-nav a {
+  display: block;
+  background: #438bbd;
+  border-radius: 3px;
+  padding: 5px;
+  color: #fff;
+}
+
+.main-nav .active,
+.main-nav a:hover,
+.search-form button:hover {
+  background-color: rgb(247, 224, 21)
+}
+
+.photo-container {
+  width: 70%;
+  margin: auto;
+}
+.photo-container ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  -ms-align-items: flex-start;
+  align-items: flex-start;
+}
+
+.photo-container ul li {
+  width: 220px;
+  height: 165px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.photo-container ul img {
+  width: 100%;
+  transform: scale(1.25);
+  transition: transform 1.25s;
+}
+
+.photo-container li:hover img {
+  transform: scale(1.65);
+}
+
+.photo-container .not-found {
+  width: 100%;
+}
+
+@media only screen and (max-width: 767px)  {
+  body {
+    padding-top: 2em;
+  }
+
+  .photo-container li {
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width: 768px)  {
+  body {
+    padding-top: 4em;
+  }
+
+  .container {
+    max-width: 960px;
+    margin: auto;
+  }
+
+  .main-nav ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-nav li {
+    margin: 10px;
+    width: 100px;
+  }
+}
+
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 6px;
+  box-sizing: border-box;
+  border: 26px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
 }
